<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/welcome"
                android:textColor="@color/pluedd"
                android:textSize="@dimen/text_medium" />


            <TextView
                android:id="@+id/text_country_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:drawableStart="@drawable/location_on_24"
                android:textColor="@color/pluedd"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/pluedd"
                android:textSize="@dimen/text_medium" />


            <androidx.cardview.widget.CardView
                android:id="@+id/weather_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_giant"
                android:background="@color/plue_light"
                app:cardCornerRadius="@dimen/radius_semi_medium"
                app:cardElevation="@dimen/elevation_small">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <ImageView
                        android:id="@+id/image_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/margin_giant"
                        android:src="@drawable/cloud2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.856"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_giant"
                        android:textColor="@color/pluedd"
                        android:textSize="@dimen/text_very_giant"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.20"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/image_weather" />


                    <LinearLayout
                        android:id="@+id/linear_pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_large"
                        android:layout_marginTop="@dimen/margin_very_giant"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_temperature">


                        <ImageView
                            android:id="@+id/image_cloud"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/pre3" />

                        <TextView
                            android:id="@+id/text_cloud"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginVertical="@dimen/margin_tiny"
                            android:text="@string/Pressure" />

                        <TextView
                            android:id="@+id/text_cloud_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/margin_medium" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toStartOf="@id/linear_wind"
                        app:layout_constraintStart_toEndOf="@+id/linear_pressure"
                        app:layout_constraintTop_toTopOf="@id/linear_pressure">

                        <ImageView
                            android:id="@+id/image_humidaty"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/hum3" />

                        <TextView
                            android:id="@+id/text_humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginVertical="@dimen/margin_tiny"
                            android:text="@string/humidity" />

                        <TextView
                            android:id="@+id/text_humidity_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/margin_medium" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/linear_humidity"
                        app:layout_constraintTop_toTopOf="@id/linear_humidity">

                        <ImageView
                            android:id="@+id/image_wind"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/margin_small"
                            android:src="@drawable/w3" />

                        <TextView
                            android:id="@+id/text_wind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginVertical="@dimen/margin_tiny"
                            android:text="@string/wind" />

                        <TextView
                            android:id="@+id/text_wind_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/margin_medium" />


                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:text="@string/outfit" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_clothes"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="@dimen/margin_giant"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weather_cardView"
                app:shapeAppearanceOverlay="@style/ImageStyle" />


        </LinearLayout>


    </ScrollView>

</LinearLayout>